tests/fixtures/invalid/pow_bool_bytes_str.py
# Cannot call pow() with Bool, Bytes, Str
x = pow(True, b"hello", "hello")
